<resources>
    <string name="app_name">Special Events</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="event_name">Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="submit">submit</string>
    <string name="name">Name</string>
    <string name="event_none">None</string>
    <string name="event_desc">Event Desc.</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="error_create_event">Cannot create event. Please try later.</string>
    <string name="event_venue">Event Venue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>