<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    app:cardMaxElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--Text View to display event name-->

        <TextView
            android:id="@+id/idEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/event_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!--Text View to display event venue-->
        <TextView
            android:id="@+id/idEventVenue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idEventName"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/event_venue"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!--Text View to display event date-->
        <TextView
            android:id="@+id/idEventDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idEventVenue"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/event_desc"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/idEventDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idEventDesc"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawablePadding="2dp"
            android:text="@string/event_date" />
            <!--app:drawableStartCompat="@drawable/ic_star" -->
    </RelativeLayout>

</androidx.cardview.widget.CardView>