<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".CreateEvent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/idEventNameTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/event_name"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/idEventNameValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:inputType="none"
                android:padding="10dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/idEventDateTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/event_date"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/idEventDateValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:autofillHints=""
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:ems="10"
                android:inputType="date"
                android:minHeight="48dp"
                android:padding="10dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageButton
                android:id="@+id/idSelectDateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/date_picker_button_selector"
                android:contentDescription="@string/create"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:scaleType="fitCenter"
                app:srcCompat="@android:drawable/ic_menu_my_calendar" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/idEventVenueTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/event_venue"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/idEventVenueValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:inputType="none"
                android:padding="10dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/idEventDescTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/event_desc"
                android:textAlignment="textEnd"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/idEventDescValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:autofillHints=""
                android:background="@android:drawable/editbox_dropdown_light_frame"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:padding="10dp"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/idButtonsLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/idCancelBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/idCreateBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:text="@string/create" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>